--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
     <script src="/webjars/angularjs/1.6.8/angular.min.js"></script>
+    <script src="/webjars/angularjs/1.6.8/angular-route.min.js"></script>
     <script src="/webjars/angular-filter/0.4.9/angular-filter.min.js"></script>
     <script src="/webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
@@ -22,54 +23,15 @@
 <div class="row" style="height: 800px; background-color: lightgrey">
     <div id="menu" class="col-xl-3" style="border: 1px solid">
         <ul class="list-group">
-            <li class="list-group-item" ng-click="showPage = 'showLessons'">Lessons</li>
-            <li class="list-group-item" ng-click="showPage = 'showUsers'">Users</li>
-            <li class="list-group-item" ng-click="showPage = 'showBots'">Bots</li>
+            <li class="list-group-item"><a href="#!/lessons">Lessons</a></li>
+            <li class="list-group-item"><a href="#!/questionTypes">Question Types</a></li>
+            <li class="list-group-item"><a href="#!/users">Users</a></li>
+            <li class="list-group-item"><a href="#!/bots">Bots</a></li>
         </ul>
     </div>
 
-    <div id="content" class="col-xl-9" style="border: 1px solid">
-        <div ng-if="showPage == 'showLessons'">
-            <p>Lesson's list</p>
-            <button type="button" class="btn btn-secondary" ng-click="showSubPage = 'showNewLesson'">Add New</button>
-            <button type="button" class="btn btn-secondary" ng-click="showSubPage = 'showListLesson'">Show List</button>
-            <br>
-            <br>
-
-            <div ng-if="showSubPage == 'showNewLesson'">
-                <br>
-                <input type="text" class="form-control" ng-model="newLesson.name" placeholder="Lesson's Name">
-                <input type="text" class="form-control" ng-model="newLesson.group" placeholder="Lesson's Group">
-
-                <input type="text" class="form-control" ng-model="newLesson.question" placeholder="Question">
-                <input type="text" class="form-control" ng-model="newLesson.answer" placeholder="Answer">
-                <input type="text" class="form-control" ng-model="newLesson.keyboard"
-                       placeholder="KeyBoard rows separeted by ';'">
-                <br>
-
-                <button type="button" class="btn btn-secondary float-right" ng-click="save(newLesson)">Save</button>
-            </div>
-
-            <div ng-if="showSubPage == 'showListLesson'" style="height: 500px; overflow-y: scroll;">
-                {{message}}
-
-                <ul class="list-group" ng-repeat="(grp, lesson) in lessons | groupBy: 'group'">
-                    {{ grp }}
-                    <li class="list-group-item" ng-repeat="l in lesson" ng-click="showPage = 'l.group l.name'">
-                        {{ l.name }}
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-
-        <div ng-if="showPage == 'showUsers'">
-            <p>User's content</p>
-        </div>
-
-        <div ng-if="showPage == 'showBots'">
-            <p>Bot's content</p>
-        </div>
+    <div id="content" class="col-xl-9" style="border: 1px solid" >
+        <div ng-view></div>
     </div>
 </div>
 
