Batch size option added question type lesson processing added sentences mock added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,7 @@
         <ul class="list-group">
             <li class="list-group-item"><a href="#!/lessons">Lessons</a></li>
             <li class="list-group-item"><a href="#!/questionTypes">Question Types</a></li>
+            <li class="list-group-item"><a href="#!/sentences">Sentences</a></li>
             <li class="list-group-item"><a href="#!/users">Users</a></li>
             <li class="list-group-item"><a href="#!/bots">Bots</a></li>
         </ul>
