--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,14 +4,24 @@
     <title>Welcome</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/webjars/angularjs/1.6.8/angular.min.js"></script>
-    <script src="/webjars/angularjs/1.6.8/angular-route.min.js"></script>
+    <script src="/webjars/angularjs/1.7.5/angular.min.js"></script>
+    <script src="/webjars/angularjs/1.7.5/angular-route.min.js"></script>
     <script src="/webjars/angular-filter/0.4.9/angular-filter.min.js"></script>
-    <script src="/webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="/webjars/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/webjars/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.1.3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/webjars/bootstrap-glyphicons/bdd2cbfba0/css/bootstrap-glyphicons.css"/>
 
-    <script src="/js/index.js"></script>
+    <script src="/js/index.js" type="text/javascript"></script>
+
+    <!-- Yandex.Metrika counter -->
+    <script src="/js/ya.metrics.js" type="text/javascript"></script>
+    <noscript>
+        <div>
+            <!--img src="" style="position:absolute; left:-9999px;" alt=""/-->
+        </div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 
 </head>
 <body class="container-fluid" ng-controller="bot-controller" ng-cloak>
@@ -28,10 +38,11 @@
             <li class="list-group-item"><a href="#!/sentences">Sentences</a></li>
             <li class="list-group-item"><a href="#!/users">Users</a></li>
             <li class="list-group-item"><a href="#!/bots">Bots</a></li>
+            <li class="list-group-item"><a href="#!/pandas">Pandas</a></li>
         </ul>
     </div>
 
-    <div id="content" class="col-xl-9" style="border: 1px solid" >
+    <div id="content" class="col-xl-9" style="border: 1px solid">
         <div ng-view></div>
     </div>
 </div>
