configuration's view added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="bot-app">
 <head>
-    <title>Welcome</title>
+    <title>Teacher's page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
     <script src="/webjars/angularjs/1.7.5/angular.min.js"></script>
@@ -33,12 +33,13 @@
 <div class="row" style="height: 800px; background-color: lightgrey">
     <div id="menu" class="col-xl-3" style="border: 1px solid">
         <ul class="list-group">
-            <li class="list-group-item"><a href="#!/lessons">Lessons</a></li>
-            <li class="list-group-item"><a href="#!/questionTypes">Question Types</a></li>
-            <li class="list-group-item"><a href="#!/sentences">Sentences</a></li>
-            <li class="list-group-item"><a href="#!/users">Users</a></li>
-            <li class="list-group-item"><a href="#!/bots">Bots</a></li>
-            <li class="list-group-item"><a href="#!/pandas">Pandas</a></li>
+            <li class="list-group-item"><a href="#!/lessons">Уроки</a></li>
+            <li class="list-group-item"><a href="#!/questionTypes">Типы вопросов</a></li>
+            <li class="list-group-item"><a href="#!/sentences">Предложения</a></li>
+            <li class="list-group-item"><a href="#!/users">Пользователи</a></li>
+            <li class="list-group-item"><a href="#!/bots">Боты</a></li>
+            <li class="list-group-item"><a href="#!/pandas">Панды</a></li>
+            <li class="list-group-item"><a href="#!/configs">Конфигурации</a></li>
         </ul>
     </div>
 
